--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,19 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"devStart": "nodemon server.mjs"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"cors": "^2.8.5",
-		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
-		"mongodb": "^5.4.0"
+		"mongodb": "^5.4.0",
+		"mongoose": "^7.1.0"
+	},
+	"devDependencies": {
+		"dotenv": "^16.0.3",
+		"nodemon": "^2.0.22"
 	}
 }
