--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://mattmurph888:3WVKKRlGsUdlUnWv@swim-set-cluster.oukhfmm.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://mattmurph888:3WVKKRlGsUdlUnWv@swim-set-cluster.oukhfmm.mongodb.net/swim_set_db?retryWrites=true&w=majority
